<resources>
    <string name="app_name">Typhoon</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_extensions">Extensions</string>
    <string name="menu_home">Home</string>
    <string name="menu_library">Library</string>
    <string name="menu_history">History</string>

    <string name="dialog_cancel">Cancel</string>
    <string name="dialog_close">Close</string>
    <string name="dialog_library_empty">You have no lists</string>
    <string name="dialog_library_list_added">List was added</string>
    <string name="dialog_library_list_field_blank">Field was left blank</string>
    <string name="dialog_library_list_new">New list</string>
    <string name="dialog_library_list_new_name">New list name</string>
    <string name="dialog_library_list_rename">Rename list</string>
    <string name="dialog_library_list_add_series">Add to Library</string>
    <string name="dialog_library_list_remove_series_confirm">Are you sure you want to remove this series from the list?</string>
    <string name="dialog_player_mirror_choice">Choose Mirror</string>
    <string name="dialog_source_notready_title">Not Ready</string>
    <string name="dialog_source_notready_desc">This source has not been updated and might not work. Use at your own risk!</string>
    <string name="dialog_source_info_description">Description</string>
    <string name="dialog_no">No</string>
    <string name="dialog_ok">OK</string>
    <string name="dialog_yes">Yes</string>

    <string name="library_backup">Library backed up</string>
    <string name="library_list_series_added">Added series to list</string>
    <string name="library_list_renamed">List was renamed</string>
    <string name="library_manager">Library Manager</string>
    <string name="library_restore">Library restored</string>
    <string name="library_restore_file_error">File could not be restored from</string>

    <string name="action_search">Search</string>
    <string name="action_managelibrary">Manage Library</string>
    <string name="action_library_add">Add to Library</string>

    <string name="series_completed">Completed</string>
    <string name="series_ongoing">Ongoing</string>

    <string name="tab_episodes">Episodes</string>
    <string name="tab_details">Details</string>
    <string name="tab_recommendations">Recommendations</string>

    <string name="player_control_source_mirror">Select mirror</string>
    <string name="player_control_source_web">Switch</string>
    <string name="player_error_episode_broken">Episode broken. Try another source</string>
    <string name="player_error_episode_unknown">Error retrieving episode</string>
    <string name="player_error_links_notfound">No links were found</string>
    <string name="player_error_mirror_broken">Choose another mirror, this mirror is broken</string>
    <string name="player_error_source_not_found">Source for episode was not found</string>
    <string name="player_error_request_timeout">Request timed out</string>
    <string name="player_video_loading">Loading video&#8230;</string>
    <string name="player_video_options_none">There are no more video options</string>
    <string name="player_mirror_options_none">There are no mirrors</string>
    <string name="player_web_switching">Switching to web player</string>


    <string name="listings_default">Default listing</string>
    <string name="listings_none">No listings</string>

    <string name="loading_series">Loading more series</string>

    <string name="preferences_category_general">General</string>
    <string name="preferences_category_about">About</string>
    <string name="preferences_preference_feedback">Send feedback</string>
    <string name="preferences_preference_history">Enable watch history</string>
    <string name="preferences_preference_open_source">Open source licenses</string>
    <string name="preferences_preference_version">App version</string>

    <string name="search_results">Results for %s</string>s
</resources>