<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_extensions"
        android:name="com.airstream.typhoon.ui.home.HomeFragment"
        android:label="@string/menu_extensions"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_home"
        android:name="com.airstream.typhoon.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_library"
        android:name="com.airstream.typhoon.ui.library.LibraryFragment"
        android:label="@string/menu_library"
        tools:layout="@layout/fragment_library" />
</navigation>